// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`execute strcusx-exchange-rate should reject requests missing required bounds 1`] = `
{
  "error": {
    "message": "[Param: minRate] param is required but no value was provided",
    "name": "AdapterError",
  },
  "status": "errored",
  "statusCode": 400,
}
`;

exports[`execute strcusx-exchange-rate should return junior success 1`] = `
{
  "data": {
    "accountingAddress": "31vVMMVrketFGG9s25PxtQzm8HsAkqoSEoYuj4bXWcVn",
    "assetMintAddress": "4ujhCkYxvGwdQnKRRzCjuVreThRAzY3k4n78iypNSQce",
    "assetMintDecimals": 6,
    "assetVaultAddress": "CPAUEk6XiZf4mvnWhEZZn1ojA3PyhTzDkovZX9sK6bgJ",
    "boundsApplied": false,
    "computedResult": "1000000002222222222",
    "controllerAddress": "DChEFFUoGXeZgh4Mivq7gR8mW5DQi7yMaQ1naqmnxB3q",
    "controllerPaused": false,
    "decimals": 18,
    "feeVaultAddress": "CGfUqdJoGKSEQMjdiRebxTxqB2PtfsJcphorC5Nnpxgs",
    "juniorAssets": "450000001",
    "juniorComputedResult": "1000000002222222222",
    "juniorMintAddress": "Qc25hHS8uv2CEZUd9vC1sKBwsHgMdosF6KG6MsBavSd",
    "juniorMintDecimals": 6,
    "juniorMintSupply": "450000000",
    "juniorShares": "450000000",
    "lossVaultAddress": "J5TUHd2nzueopWNatEMW514uAYwyyLxioYsPQA6UuGt2",
    "maxRate": "1050000000000000000",
    "minRate": "950000000000000000",
    "programAddress": "7iNvMc3x5VvwNmYomAAg86CpWeEw7QfDF2z5GgtDzHXe",
    "result": "1000000002222222222",
    "seniorAssets": "200000000",
    "seniorComputedResult": "1000000000000000000",
    "seniorMintAddress": "4m1JrzTPgaKg1DwG19BotH4ZAUyrMzjmSDkGUr38YAai",
    "seniorMintDecimals": 6,
    "seniorMintSupply": "200000000",
    "seniorShares": "200000000",
    "strategyAddress": "AT57KkNUMM3UeVwQmvTL8undUkFKYYRigtsCToxfpP1o",
    "strategyName": "STRC-USX-1",
    "strategyPaused": false,
    "strategyStatus": 0,
    "totalAssets": "650000001",
    "tranche": "junior",
    "vestingVaultAddress": "4NeU4YUyTX2fN9XTTRDpqddL94AvvWrcvVf4FGKaXBsd",
  },
  "result": "1000000002222222222",
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
  },
}
`;

exports[`execute strcusx-exchange-rate should return senior success 1`] = `
{
  "data": {
    "accountingAddress": "31vVMMVrketFGG9s25PxtQzm8HsAkqoSEoYuj4bXWcVn",
    "assetMintAddress": "4ujhCkYxvGwdQnKRRzCjuVreThRAzY3k4n78iypNSQce",
    "assetMintDecimals": 6,
    "assetVaultAddress": "CPAUEk6XiZf4mvnWhEZZn1ojA3PyhTzDkovZX9sK6bgJ",
    "boundsApplied": false,
    "computedResult": "1000000000000000000",
    "controllerAddress": "DChEFFUoGXeZgh4Mivq7gR8mW5DQi7yMaQ1naqmnxB3q",
    "controllerPaused": false,
    "decimals": 18,
    "feeVaultAddress": "CGfUqdJoGKSEQMjdiRebxTxqB2PtfsJcphorC5Nnpxgs",
    "juniorAssets": "450000001",
    "juniorComputedResult": "1000000002222222222",
    "juniorMintAddress": "Qc25hHS8uv2CEZUd9vC1sKBwsHgMdosF6KG6MsBavSd",
    "juniorMintDecimals": 6,
    "juniorMintSupply": "450000000",
    "juniorShares": "450000000",
    "lossVaultAddress": "J5TUHd2nzueopWNatEMW514uAYwyyLxioYsPQA6UuGt2",
    "maxRate": "1050000000000000000",
    "minRate": "950000000000000000",
    "programAddress": "7iNvMc3x5VvwNmYomAAg86CpWeEw7QfDF2z5GgtDzHXe",
    "result": "1000000000000000000",
    "seniorAssets": "200000000",
    "seniorComputedResult": "1000000000000000000",
    "seniorMintAddress": "4m1JrzTPgaKg1DwG19BotH4ZAUyrMzjmSDkGUr38YAai",
    "seniorMintDecimals": 6,
    "seniorMintSupply": "200000000",
    "seniorShares": "200000000",
    "strategyAddress": "AT57KkNUMM3UeVwQmvTL8undUkFKYYRigtsCToxfpP1o",
    "strategyName": "STRC-USX-1",
    "strategyPaused": false,
    "strategyStatus": 0,
    "totalAssets": "650000001",
    "tranche": "senior",
    "vestingVaultAddress": "4NeU4YUyTX2fN9XTTRDpqddL94AvvWrcvVf4FGKaXBsd",
  },
  "result": "1000000000000000000",
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
  },
}
`;
